--- a/footer.html
+++ b/footer.html
@@ -3,8 +3,8 @@
     Thanks <a href="https://GitHub.com/Naereen">Naereen</a> for the theme, this server is self-hosted by Rahadyan © 2023.
 </footer>
     <script src="https://unpkg.com/xregexp/xregexp-all.js"></script>
-    <script type="text/javascript" src="/Nginx-Fancyindex-Theme-dark/addNginxFancyIndexForm.js"></script>
-    <script type="text/javascript" src="/Nginx-Fancyindex-Theme-dark/showdown.min.js"></script>
+    <script type="text/javascript" src="/fancydark/addNginxFancyIndexForm.js"></script>
+    <script type="text/javascript" src="/fancydark/showdown.min.js"></script>
     <script type="text/javascript" defer>
     var converter = new showdown.Converter({tables: true});
     $( "#raw_include_HEADER_md" ).load( "HEADER.md", function (){
